kubernetes/apps/smoke-test/namespace.yaml
# This namespace contains the smoke-test workload.

apiVersion: v1
kind: Namespace
metadata:
  name: smoke-test
